Remove extracted directories and update .gitignore

--- a/1.naiveBayes/.gitignore
+++ b/1.naiveBayes/.gitignore
@@ -1,1 +1,1 @@
--e "__pycache__/\n.ipynb_checkpoints\nvenv/\n*.pyc\n*.pyo\n*.pyd" 
+-e "__pycache__/\n.ipynb_checkpoints\nvenv/\n*.pyc\n*.pyo\n*.pyd.idea/extracted_adult/adult_extracted/adult_unique/" 
